Do not write out an unusable LC_* value for the "C" locale

BUG:354984
REVIEW:125984